# structcast

./: .releaserc.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_AGENT.md  SKILL.md  package.json  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docker/: dev.dockerfile
examples/: 01_basic_instantiation.py  02_specifier_access.py  03_template_rendering.py  04_security_configuration.py  05_yaml_workflow.py  06_config_driven_pipeline.py  06_sensor_dashboard.py  07_dynamic_service_registry.py  07_validation_pipeline.py  08_multi_stage_transform.py  08_multi_tenant_analytics.py
src/structcast/: __init__.py
src/structcast/core/: __init__.py  base.py  constants.py  exceptions.py  instantiation.py  instantiator.py  specifier.py  template.py
src/structcast/utils/: __init__.py  base.py  constants.py  dataclasses.py  lazy_import.py  security.py  types.py
src/uv_default_project/: __init__.py  __main__.py
tests/: __init__.py  test_basic.py
tests/core/: __init__.py  test_instantiation.py  test_instantiator.py  test_specifier.py  test_template.py
tests/utils/: __init__.py  test_base.py  test_lazy_import.py  test_security.py
