[project]
name = "structcast"
version = "1.1.2"
description = "Elegantly orchestrating structured data via a flexible and serializable workflow."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "KCH", email = "f6ra07nk14@gmail.com" }]
keywords = [
    "structured-data",
    "configuration",
    "instantiation",
    "yaml",
    "jinja2",
    "pydantic",
    "data-access",
    "templating",
    "serialization",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["jinja2>=3.1.6", "pydantic>=2.11.0", "ruamel-yaml[jinja2]>=0.19.1", "typing-extensions>=4.15.0"]

[project.urls]
Homepage = "https://github.com/f6ra07nk14/structcast"
Repository = "https://github.com/f6ra07nk14/structcast"
Issues = "https://github.com/f6ra07nk14/structcast/issues"
Changelog = "https://github.com/f6ra07nk14/structcast/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["mypy>=1.19.1", "pytest>=8.4.2", "pytest-cov>=7.0.0", "ruff>=0.14.14"]
tox = ["tox>=4.0.0", "tox-uv>=1.0.0"]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
addopts = """\
--doctest-modules \
-s \
--cov src/ \
--cov-report term \
--cov-report xml:coverage.xml \
--cov-report html:coverage_html \
"""
testpaths = ["tests/", "src/structcast/"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
no_site_packages = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
# warn_required_dynamic_aliases = true

[tool.ruff]
src = ["src/structcast", "tests"]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "PL",     # pylint
    "PT",     # pylint-pytest
    "D",      # pydocstyle
    "RUF022",
]
extend-select = [
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "S",  # flake8-bandit
    "C4", # flake8-comprehensions
]
ignore = ["PLW2901", "PLR2004"]
exclude = []

[tool.ruff.lint.per-file-ignores]
"src/structcast/**" = ["PT", "B028"]
"src/structcast/commands/**" = ["PT", "B028", "B008"]
"tests/**" = ["S"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["structcast"]
force-sort-within-sections = true
# lines-between-types = 1

[tool.ruff.lint.pylint]
max-args = 20
max-returns = 10
max-branches = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
